objects/agf__Release_Reports__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>agf__Release_Burndown_Report_ID__c</fullName>
        <label>Release Burndown Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Release_Burnup_Report_ID__c</fullName>
        <label>Release Burnup Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Release_Progress_by_Theme__c</fullName>
        <label>Release Progress by Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Sprint_Completed_Points_Report_ID__c</fullName>
        <label>Sprint Completed Points Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Stories_In_Release_By_Theme__c</fullName>
        <label>Stories In Release By Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Stories_in_Release_By_Sprint__c</fullName>
        <label>Stories in Release By Sprint</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Release Reports</label>
</CustomObject>